ns-chart/templates/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: test-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /notes
        backend:
          serviceName: noteservice
          servicePort: noteservice
